corrected spacing in layout

--- a/css/layout.css
+++ b/css/layout.css
@@ -60,7 +60,7 @@ html {
 .content-box,
 #tourdates {
   max-width: 1080px;
-  margin: 10px auto 30xp auto;
+  margin: 10px auto;
   padding: 25px 30px;
   background-color: #fff;
   border: 3.5px solid #d9a79b;
